--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,500;1,600;1,700&display=swap");
 
+/* Reset */
+
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +28,7 @@ body {
   top: 5%;
 }
 
-#blob2 {
+.blob2 {
   position: absolute;
   z-index: -2;
   width: 50vw;
