overview paragraph plus title

--- a/style.css
+++ b/style.css
@@ -342,6 +342,8 @@ button:hover {
   font-size: 2.5vw;
 }
 
+/* CASE STUDY PAGE */
+
 #case-study-banner {
   width: 100vw;
   height: 30vh;
@@ -357,6 +359,13 @@ button:hover {
 #case-study-banner img {
   width: 100%;
   object-fit: cover;
+}
+
+#case-study-body {
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .leave {
