fixed width of body container

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ button:hover {
 
 #case-study-body {
   margin-top: 10vh;
-  width: inherit;
+  width: 58.35vw;
   display: flex;
   flex-direction: column;
   align-items: center;
