--- a/style.css
+++ b/style.css
@@ -362,11 +362,17 @@ button:hover {
 }
 
 #case-study-body {
+  animation: flyin 1s ease-in-out;
   margin-top: 10vh;
   width: 58.35vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#case-study-body h1 {
+  font-weight: 700;
+  font-size: 1.5em;
 }
 
 .leave {
