--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ button:hover {
   font-size: 2.5vw;
 }
 
-/* CASE STUDY PAGE */
+/* CASE STUDY PAGES */
 
 #case-study-banner {
   width: 100vw;
@@ -444,6 +444,11 @@ button:hover {
 
 .hf-right {
   width: 50%;
+}
+
+.tq-hf {
+  margin-top: 5%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .leave {
