--- a/style.css
+++ b/style.css
@@ -540,6 +540,36 @@ button:hover {
   .case-studies {
     max-width: 90%;
   }
+
+  /* About Page */
+
+  #about-container {
+    flex-direction: column-reverse;
+    width: 80%;
+    margin: 0 10vw;
+  }
+  #portrait {
+    /* width: 50% !important; */
+    position: absolute;
+    top: 16%;
+    right: 10%;
+    z-index: -1;
+  }
+  #intro {
+    width: 100% !important;
+  }
+  #intro h1 {
+    margin-top: 10vh;
+    width: 50%;
+    font-size: 9vw !important;
+  }
+
+  #about-header {
+    margin-bottom: 10vh;
+  }
+  #intro p {
+    font-size: 20px;
+  }
 }
 
 /* Mobile Dimensions */
@@ -634,7 +664,30 @@ button:hover {
     align-items: flex-end;
     width: 100%;
     height: 250px;file:///D:/Users/Anthony/Documents/GitHub/achow605.github.io/index.html
+  }
 
+  /* About Page */
+
+  #portrait {
+    position: static;
+    width: 100% !important;
+    justify-content: center !important;
+  }
+  #intro h1 {
+    margin-top: 5vh;
+    width: 80%;
+  }
+  #about-header {
+    margin-bottom: 0;
+  }
+  #about-container {
+    align-items: center;
+  }
+  .about-header {
+    height: 10vh !important;
+  }
+  #intro p {
+    font-size: 1em;
   }
 }
 
