Fixed intro header issue and projects link on about movile nav bar

--- a/style.css
+++ b/style.css
@@ -561,7 +561,10 @@ button:hover {
   #intro h1 {
     margin-top: 10vh;
     width: 50%;
-    font-size: 9vw !important;
+  }
+
+  .about-intro {
+    font-size: 9vw;
   }
 
   #about-header {
