--- a/style.css
+++ b/style.css
@@ -24,20 +24,13 @@ a {
   transition: color 0.25s linear; /* For modern browsers */
 }
 
-body {
+#body-wrapper {
   overflow-x: hidden;
-  /* position: absolute; */
 }
 
 #links li:hover {
   color: #00B5FF;
   cursor: pointer;
-}
-
-#blobs {
-  overflow: hidden;
-  max-width: 100vw;
-  height: auto;
 }
 
 #blob1 {
@@ -609,9 +602,7 @@ button:hover {
     padding-bottom: 10vh;
     line-height: 120%;
   }
-  #blob1, #blob2, #blob3 {
-    display: none;
-  }
+
   #nav-icon-container {
     display: flex;
     justify-content: flex-end;
