--- a/style.css
+++ b/style.css
@@ -451,6 +451,9 @@ button:hover {
 
 .hf-left img {
   width: 80% !important;
+}
+
+.dropshadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
