--- a/style.scss
+++ b/style.scss
@@ -25,8 +25,10 @@ body {
 
 .neumorphism {
   background: linear-gradient(145deg, #ffffff, #dddddd);
-  box-shadow:  14px 14px 28px #cbcbcb,
-               -14px -14px 28px #ffffff;
+  box-shadow:  27px 27px 54px #d0d0d0,
+             -27px -27px 54px #ffffff;
+
+  padding: 5px;
 }
 
 $accent-color: #303030;
