--- a/style.scss
+++ b/style.scss
@@ -86,7 +86,7 @@ nav {
     width: inherit;
     height: 60px;
     padding: 0 7%;
-    transition: 0.3s;
+    transition: 0.3s ease;
 
     > h1 {
       display: none;
