--- a/style.scss
+++ b/style.scss
@@ -319,7 +319,7 @@ nav {
     justify-content: center;
     position: absolute;
     bottom: 10%;
-    left: -15px;
+    left: 0;
     height: auto;
     width: 100vw;
 
