--- a/DES157/styles.css
+++ b/DES157/styles.css
@@ -99,7 +99,7 @@ header img {
   border-radius: 100%;
   box-shadow: 0px 0px 75px -25px rgba(184, 187, 196, 1);
   animation: pulse 3s infinite;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out, border-radius 1ms;
 }
 
 header img:hover {
