--- a/DES157/styles.css
+++ b/DES157/styles.css
@@ -157,6 +157,7 @@ main section > ul > li > ul > li {
 main section > ul > li > ul > li > a{
   font-family: "Anonymous Pro", sans-serif;
   font-weight: 400;
+  font-size: 0.88em;
 }
 
 a:hover {
