--- a/DES157/styles.css
+++ b/DES157/styles.css
@@ -16,7 +16,7 @@ h1, h2, ul {
 }
 
 p, a {
-  font-family: Roboto, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   color: #f5f5f5;
 }
@@ -24,7 +24,7 @@ p, a {
 /* Navigation Bar*/
 nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   height: 15vh;
 }
@@ -35,8 +35,8 @@ nav ul {
 }
 
 nav ul li {
-  margin-left: 5em;
-  font-size: 1.1em;
+  margin: 5em;
+  font-size: 1em;
   font-weight: 500;
 }
 
@@ -105,7 +105,6 @@ header img {
 header img:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 75px -40px rgba(184, 187, 196, 1);
-  cursor: pointer;
 }
 
 .arrow a {
