--- a/DES157/styles.css
+++ b/DES157/styles.css
@@ -24,9 +24,15 @@ p, a {
 /* Navigation Bar*/
 nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 15vh;
+}
+
+nav img {
+  height: 30%;
+  width: auto;
+  cursor: pointer;
 }
 
 nav ul {
@@ -35,7 +41,7 @@ nav ul {
 }
 
 nav ul li {
-  margin: 5em;
+  margin: 5em 0 5em 5em;
   font-size: 1em;
   font-weight: 500;
 }
