--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500;1,600;1,700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 * {
   box-sizing: border-box;
 }
@@ -538,6 +538,10 @@ nav {
 .case-study-body {
   padding: 5%;
 
+  @media screen and (min-width: 999px) {
+    padding: 5% 0;
+  }
+
   h2 {
     font-size: 1.7em;
     margin-top: 1.5em;
@@ -554,9 +558,9 @@ nav {
 
   p,
   ul {
-    font-size: 1.1em;
-    font-family: "Montserrat", sans-serif;
-    line-height: 125%;
+    font-size: 1em;
+    font-family: "Open Sans", sans-serif;
+    line-height: 150%;
   }
 
   a,
