fixed logo and outline on form input

--- a/DES157/madlibs/styles.css
+++ b/DES157/madlibs/styles.css
@@ -115,6 +115,10 @@ main {
   border: none;
 }
 
+#input-form label input:focus {
+  outline: none;
+}
+
 #input-form > input, #restart {
   padding: 10px 0;
   width: 150px;
