--- a/DES157/final/styles.css
+++ b/DES157/final/styles.css
@@ -6,19 +6,33 @@ html {
   background-color: #292929;
 }
 
-body {
+footer {
+  margin: 4em 0 4em 0;
+}
+
+footer ul {
   display: flex;
   justify-content: center;
+  list-style: none;
+}
+
+footer ul li {
+  margin: 0 5%;
 }
 
 main {
   max-width: 1024px;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
   font-family: 'Montserrat', sans-serif;
   color: #48ad9c;
   margin: 60px 0;
+  font-size: 3em;
 }
 
 h2 {
