fixed validation errors

--- a/des157b/blockbuster-video/styles.css
+++ b/des157b/blockbuster-video/styles.css
@@ -79,17 +79,17 @@ section {
 @keyframes loading {
     0% {
         opacity: 1;
-        transform: scale(100%);
+        transform: scale(1);
     }
 
     50% {
         opacity: 0.5;
-        transform: scale(120%);
+        transform: scale(1.2);
     }
 
     100% {
         opacity: 1;
-        transform: scale(100%);
+        transform: scale(1);
     }
 }
 
